# Sen2Agri-System

./: .clang-format  .gitignore  .gitmodules  .ignore  AUTHORS.txt  CHANGELOG.md  FAQ.md  LICENSE.txt  README.md  SOURCES.txt  common.pri  sen2agri.pro  sen2agriPlatformInstallAndConfig.sh  todo.org
sen2agri-config/: CMakeLists.txt  configmodel.cpp  configmodel.h  configmodel.hpp  main.cpp  maindialog.cpp  maindialog.h  maindialog.hpp  maindialog.ui  parameterchangelistener.cpp  parameterchangelistener.hpp  parameterkey.cpp  parameterkey.hpp  pch.hpp  runtimeerror.cpp  runtimeerror.hpp  sen2agri-config.pro
sen2agri-processors/: CMakeLists.txt  COPYRIGHT  CodeCopyrightCpp.txt  CodeCopyrightPython.txt  merge_code_copyright.py  paramList.txt
sen2agri-processors/AgriculturalPractices/: CMakeLists.txt
sen2agri-processors/AgriculturalPractices/ConfigFiles/: S4C_L4C_Config_CZE.cfg  S4C_L4C_Config_ESP.cfg  S4C_L4C_Config_ITA.cfg  S4C_L4C_Config_LTU.cfg  S4C_L4C_Config_NLD.cfg  S4C_L4C_Config_ROU.cfg  S4C_L4C_Default_Config.cfg  S4C_L4C_Sample_Catch_Practice_File_short.csv
sen2agri-processors/Common/: CMakeLists.txt
sen2agri-processors/Common/ComputeClassCounts/: CMakeLists.txt  ComputeClassCounts.cxx  itkLabelErodeImageFilter.h  itkLabelErodeImageFilter.hxx  otbStreamingHistogramImageFilter.h  otbStreamingHistogramImageFilter.hxx
sen2agri-processors/Common/ComputeConfusionMatrixMulti/: CMakeLists.txt  otbComputeConfusionMatrixMulti.cxx
sen2agri-processors/Common/CropMaskImageClassifier/: CMakeLists.txt  CropMaskImageClassifier.cpp
sen2agri-processors/Common/CropMaskStatistics/: CMakeLists.txt
sen2agri-processors/Common/CropMaskTrainImagesClassifier/: CMakeLists.txt  otbTrainImagesClassifier.cxx  otbTrainImagesClassifier.h
sen2agri-processors/Common/CropTypeImageClassifier/: CMakeLists.txt  CropTypeImageClassifier.cpp
sen2agri-processors/Common/CropTypeStatistics/: CMakeLists.txt  CropTypeStatistics.cpp
sen2agri-processors/Common/CropTypeTrainImagesClassifier/: CMakeLists.txt  otbListSampleGeneratorRaster.h  otbListSampleGeneratorRaster.txx  otbTrainImagesClassifier.cxx  otbTrainImagesClassifier.h
sen2agri-processors/Common/FeatureExtractor/: CMakeLists.txt  FeatureExtractor.cpp
sen2agri-processors/Common/Filters/: ComputeNDVIFilter.h  CropMaskFeaturesSupervised.hxx  CropMaskNDVIPreprocessing.h  CropMaskPreprocessing.h  CropMaskSpectralFeaturesFilter.h  CropMaskSupervisedPreprocessing.h  CropMaskSupervisedRedEdgeFeaturesFilter.h  CropTypePreprocessing.h  DataSmoothingFilter.h  MaskedScaleImageFilter.h  RatioFilterVector.hxx  RedEdgeBandsExtractor.h  TemporalMerging.hxx  TimeSeriesReader.h  otbConcatenateVectorImagesFilter.h  otbConcatenateVectorImagesFilter.txx  otbCropMaskFeatureExtractionFilter.h  otbCropMaskFeatureExtractionFilter.txx  otbCropTypeFeatureExtractionFilter.h  otbCropTypeFeatureExtractionFilter.txx  otbLandsatMaskFilter.h  otbLandsatMaskFilter.txx  otbSentinelMaskFilter.h  otbSentinelMaskFilter.txx  otbSpotMaskFilter.h  otbSpotMaskFilter.txx  otbStreamingClassStatisticsVectorImageFilter.h  otbStreamingClassStatisticsVectorImageFilter.txx  otbStreamingStatisticsMapFromLabelImageFilter.h  otbStreamingStatisticsMapFromLabelImageFilter.hxx  otbStreamingStatisticsVectorImageFilterEx.h  otbStreamingStatisticsVectorImageFilterEx.txx  otbTemporalMergingFilter.h  otbTemporalMergingFilter.txx  otbTemporalResamplingFilter.h  otbTemporalResamplingFilter.txx
sen2agri-processors/Common/LabelImageMorphologicalOperation/: CMakeLists.txt  LabelImageMorphologicalOperation.cxx
sen2agri-processors/Common/MultiModelImageClassifier/: CMakeLists.txt  otbMultiModelImageClassificationFilter.h  otbMultiModelImageClassificationFilter.txx  otbMultiModelImageClassifier.cxx
sen2agri-processors/Common/NDVISeries/: CMakeLists.txt  NDVISeries.cpp
sen2agri-processors/Common/OTBExtensions/: CMakeLists.txt  otbConcatenateVectorImagesFilter.h  otbConcatenateVectorImagesFilter.txx  otbGridResampleImageFilter.h
sen2agri-processors/Common/TimeSeriesReader/: CMakeLists.txt  TimeSeriesReader.cpp  TimeSeriesReader.h  otbSentinelMaskFilter.cpp  otbSentinelMaskFilter.h  otbSpotMaskFilter.cpp  otbSpotMaskFilter.h
sen2agri-processors/Common/TrainImagesClassifierNew/: CMakeLists.txt  otbListSampleGeneratorEx.h  otbListSampleGeneratorEx.txx  otbListSampleGeneratorRaster.h  otbListSampleGeneratorRaster.txx  otbTrainBoost.cxx  otbTrainDecisionTree.cxx  otbTrainGradientBoostedTree.cxx  otbTrainImagesClassifier.cxx  otbTrainImagesClassifier.h  otbTrainKNN.cxx  otbTrainLibSVM.cxx  otbTrainNeuralNetwork.cxx  otbTrainNormalBayes.cxx  otbTrainRandomForests.cxx  otbTrainSVM.cxx
sen2agri-processors/Common/XMLStatistics/: CMakeLists.txt  FluentXML.cpp  FluentXML.hpp  (+2 more)
sen2agri-processors/Composite/: CMakeLists.txt  composite  composite.map
sen2agri-processors/ContinuousColorMapping/: CMakeLists.txt  ContinuousColorMapping.cxx  ContinuousColorMappingFilter.hxx  ContinuousColorMappingFunctor.hxx
sen2agri-processors/CreateFootprint/: CMakeLists.txt  CreateFootprint.cxx  CreateMaskFromValueFunctor.hxx
sen2agri-processors/CropMask/: CMakeLists.txt  crop-mask.lut  crop-mask.map
sen2agri-processors/CropType/: CMakeLists.txt  crop-type.lut
sen2agri-processors/DEM-WB/: CMakeLists.txt  align_l8.py  config.py  dem_product.py  l8_align.py
sen2agri-processors/MACCSMetadata/: CMakeLists.txt
sen2agri-processors/ProductFormatters/: CMakeLists.txt
sen2agri-processors/ProductReaders/: CMakeLists.txt
sen2agri-processors/Runner/: CMakeLists.txt  main.cpp
sen2agri-processors/Sen4CAP/: CMakeLists.txt
sen2agri-processors/VegetationStatus/: CMakeLists.txt  lai.map
sen2agri-processors/aggregate_tiles/: aggregate_tiles.py  aggregate_tiles_v0.py  run.sh
sen2agri-processors/fix_utm_proj/: fix_utm_proj.py
sen2agri-processors/merge-statistics/: CMakeLists.txt  cat-columns.cpp  count-columns.cpp  entry.cpp  entry.h  gapfill-statistics.cpp  merge-counts.cpp  merge-statistics.cpp  reader.h  statistics-reader.cpp  statistics-reader.h
sen2agri-processors/validity_checker/: validity_checker.py
(+3028 files in other folders)
