add_subdirectory(TimeSeriesReader)
add_subdirectory(OTBExtensions)
add_subdirectory(XMLStatistics)
add_subdirectory(TrainImagesClassifierNew)
add_subdirectory(CropTypeStatistics)
add_subdirectory(CropMaskStatistics)
add_subdirectory(CropTypeTrainImagesClassifier)
add_subdirectory(CropMaskTrainImagesClassifier)
add_subdirectory(CropTypeImageClassifier)
add_subdirectory(CropMaskImageClassifier)
add_subdirectory(NDVISeries)
add_subdirectory(MultiModelImageClassifier)
add_subdirectory(ComputeConfusionMatrixMulti)
add_subdirectory(FeatureExtractor)
add_subdirectory(Utils)
add_subdirectory(XmlUtils)
add_subdirectory(LabelImageMorphologicalOperation)
add_subdirectory(ComputeClassCounts)
