add_subdirectory(TemporalFeatures)
add_subdirectory(StatisticFeatures)
add_subdirectory(RandomSelection)
add_subdirectory(DataSmoothing)
add_subdirectory(TemporalFeaturesNoInsitu)
add_subdirectory(SpectralFeatures)
add_subdirectory(PrincipalComponentAnalysis)
add_subdirectory(MeanShiftSegmentation)
add_subdirectory(MajorityVoting)
add_subdirectory(RandomForestTraining)
add_subdirectory(Trimming)
add_subdirectory(Erosion)


